# Left_Right_Center

./: Cargo.toml
res/: LCRRules.txt
src/: main.rs  main1.txt
