[package]
name = "left_right_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = { version = "0.18.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.8.5"
